Java16のAPIはいったん使わないことにした